View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031253 | Open CASCADE | OCCT:Visualization | public | 2019-12-19 00:13 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031253: Visualization, TKOpenGl - phong shading GLSL compilation fail on Adreno 308 | ||||
Description | Phong shading doesn't work on Adreno 308 due to GLSL program compilation error.363: 364: vec3 Normal = vNormal; 365: vec3 Ambient; 366: vec3 Diffuse; 367: vec3 Specular; ... 20:04 TKOpenGl | Type: Error | ID: 0 | Severity: High | Message: Failed to compile Fragment Shader [occt_phong-l_d-0000]. Compilation log: Fragment shader compilation failed. Internal compiler error: Right side must be a constant expression This is because of the following line in code: > vec3 Normal = vNormal; | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31253 has been created by kgv. SHA-1: dac7774e5565e90b82c8af38f38ccd487b0fc5fb Detailed log of new commits: Author: kgv Date: Thu Dec 19 00:11:55 2019 +0300 0031253: Visualization, TKOpenGl - phong shading GLSL compilation fail on Adreno 308 |
|
Branch CR31253 has been updated forcibly by kgv. SHA-1: 1332807b89c4328ca0d621a3b3e856410fc7281d |
|
Branch CR31253_1 has been created by kgv. SHA-1: bea6ec8db128fd9964a6ce322e8c9d8c80c24b57 Detailed log of new commits: Author: kgv Date: Thu Dec 19 00:11:55 2019 +0300 0031253: Visualization, TKOpenGl - phong shading GLSL compilation fail on Adreno 308 Removed initialization of global Normal variable outside of main() block. occLight_IsHeadlight() flag is now packed into occLight_Position().w |
|
Branch CR31253_1 has been updated forcibly by kgv. SHA-1: 9e4a5638d681bb8b2f9ae680d090c21b0db7e306 |
|
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31253_1-master-KGV/ |
|
Combination - OCCT branch : WEEK-51 master SHA - 9504a30d153b3281750b1a1ce56ae15317160032 48c80365a5ee43eb35cde01737ce3b9b92fa554e Products branch : WEEK-51 SHA - 99f80f7455973d51db9d36558d69941712fdd853 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16954.910000000098 / 16976.290000000114 [-0.13%] Products Total CPU difference: 10728.550000000081 / 10746.800000000061 [-0.17%] Windows-64-VC14: OCCT Total CPU difference: 18408.234375 / 18406.625 [+0.01%] Products Total CPU difference: 12716.875 / 12757.328125 [-0.32%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31253_1 has been deleted by inv. SHA-1: 9e4a5638d681bb8b2f9ae680d090c21b0db7e306 |
|
Branch CR31253 has been deleted by inv. SHA-1: 1332807b89c4328ca0d621a3b3e856410fc7281d |
occt: master 9504a30d 2019-12-18 21:11:55 Committer: bugmaster Details Diff |
0031253: Visualization, TKOpenGl - phong shading GLSL compilation fail on Adreno 308 Removed initialization of global Normal variable outside of main() block. occLight_IsHeadlight() flag is now packed into occLight_Position().w |
Affected Issues 0031253 |
|
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.hxx | Diff File | ||
mod - src/Shaders/Declarations.glsl | Diff File | ||
mod - src/Shaders/DeclarationsImpl.glsl | Diff File | ||
mod - src/Shaders/Shaders_DeclarationsImpl_glsl.pxx | Diff File | ||
mod - src/Shaders/Shaders_Declarations_glsl.pxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-12-19 00:13 | kgv | New Issue | |
2019-12-19 00:13 | kgv | Assigned To | => kgv |
2019-12-19 00:14 | git | Note Added: 0089641 | |
2019-12-19 00:16 | kgv | Relationship added | child of 0031096 |
2019-12-19 11:01 | git | Note Added: 0089648 | |
2019-12-19 11:16 | git | Note Added: 0089649 | |
2019-12-19 12:21 | git | Note Added: 0089652 | |
2019-12-19 13:55 | kgv | Note Added: 0089655 | |
2019-12-19 13:55 | kgv | Assigned To | kgv => bugmaster |
2019-12-19 13:55 | kgv | Status | new => resolved |
2019-12-19 13:55 | kgv | Status | resolved => reviewed |
2019-12-19 17:00 | bugmaster | Test case number | => Not required |
2019-12-20 12:17 | bugmaster | Note Added: 0089669 | |
2019-12-20 12:17 | bugmaster | Status | reviewed => tested |
2019-12-22 11:04 | bugmaster | Changeset attached | => occt master 9504a30d |
2019-12-22 11:04 | bugmaster | Status | tested => verified |
2019-12-22 11:04 | bugmaster | Resolution | open => fixed |
2019-12-22 11:09 | git | Note Added: 0089688 | |
2019-12-22 11:09 | git | Note Added: 0089689 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |