0031253: Visualization, TKOpenGl - phong shading GLSL compilation fail on Adreno 308

Removed initialization of global Normal variable outside of main() block.
occLight_IsHeadlight() flag is now packed into occLight_Position().w